* 2.2.1 	* Use buttonset for the checkboxes 	* Add Pointer for WordPress 3.3 	* Fix translation in French 	* Some medias queries for small windows ( change size of buttons and alignment )

--- a/css/sis-style.css
+++ b/css/sis-style.css
@@ -60,3 +60,11 @@ tr.notChangedAdding {
 #ajax_thumbnail_rebuild {
 	margin-top:40px;
 }
+@media screen and (max-width: 820px) {
+	.sis-label {
+		display:block;
+	}
+	.size_options label{
+		margin-top: -5px;
+	}
+}
